// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Web3Button /> should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-beqWaB gIoxQ"
  >
    <button
      class="sc-gueYoa bTpkmV"
      data-testid="button"
      type="button"
    >
      Loading...
    </button>
  </div>
</DocumentFragment>
`;

exports[`<Web3Button /> should render correctly 2`] = `
<DocumentFragment>
  <div
    class="sc-beqWaB gIoxQ"
  >
    <button
      class="sc-gueYoa bTpkmV"
      data-testid="button"
      type="button"
    >
      Connect Wallet
    </button>
  </div>
</DocumentFragment>
`;

exports[`<Web3Button /> should render correctly 3`] = `
<DocumentFragment>
  <div
    class="sc-beqWaB gIoxQ"
  >
    <button
      class="sc-gueYoa bTpkmV"
      data-testid="button"
      title="Disconnect undefined null"
      type="button"
    >
      Disconnect Wallet
    </button>
  </div>
</DocumentFragment>
`;

exports[`<Web3Button /> should render correctly 4`] = `
<DocumentFragment>
  <div
    class="sc-beqWaB gIoxQ"
  >
    <button
      class="sc-gueYoa bTpkmV"
      data-testid="button"
      type="button"
    >
      Loading...
    </button>
  </div>
</DocumentFragment>
`;
